welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: not found: value i
	while(i < 7){
              ^Program:14: error: not found: value i
     i= i+1;
     ^Program:19: error: type mismatch;
 found   : Unit
 required: Boolean
while(haveBaggle()== false){
^