welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
var bis=0;

	while(i < 7){
	
	if(estSurBiscuit()==true) bis = bis + 1;
	
	
	
	if (bis != 0) {return true;}

              else {return false;}
     i= i+1;
	
}
gauche();

while(haveBaggle()== false){
	avance();
}

}